--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "full-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+"dev": "nodemon -r dotenv/config src/index.js dotenv_config_path=./config/.env"
   },
   "author": "",
   "license": "ISC",
@@ -11,5 +12,10 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
   }
 }
